BlazorApp/wwwroot/k8s_example/blazork8s_test/deploy-resource-test-3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container-different-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-container-different-resources
  template:
    metadata:
      labels:
        app: multi-container-different-resources
    spec:
      containers:
        - name: container-one
          image: nginx
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
        - name: container-two
          image: httpd
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
