BlazorApp/wwwroot/k8s_example/blazork8s_test/not-ready-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-ready-nginx
  labels:
    app: not-ready-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: not-ready-nginx
  template:
    metadata:
      name: not-ready-nginx
      labels:
        app: not-ready-nginx
    spec:
      containers:
        - name: not-ready-nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8000
            initialDelaySeconds: 1
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8000
            initialDelaySeconds: 30
            timeoutSeconds: 30
      restartPolicy: Always
