BlazorApp/wwwroot/k8s_example/blazork8s_test/volume-csi.yaml
kind: Pod
apiVersion: v1
metadata:
  name: volume-csi
spec:
  containers:
    - name: my-frontend
      image: busybox
      volumeMounts:
        - mountPath: "/data"
          name: my-csi-inline-vol
      command: [ "sleep", "1000000" ]
  volumes:
    - name: my-csi-inline-vol
      csi:
        driver: inline.storage.kubernetes.io
        volumeAttributes:
          foo: bar
