BlazorApp/wwwroot/k8s_example/blazork8s_test/volume-iscsi.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: volume-iscsi
spec:
  containers:
    - name: iscsipd-rw
      image: kubernetes/pause
      volumeMounts:
        - mountPath: "/mnt/iscsipd"
          name: iscsipd-rw
  volumes:
    - name: iscsipd-rw
      iscsi:
        targetPortal: 10.0.2.15:3260
        portals: ['10.0.2.16:3260', '10.0.2.17:3260']
        iqn: iqn.2001-04.com.example:storage.kube.sys1.xyz
        lun: 0
        fsType: ext4
        readOnly: true
---
---
apiVersion: v1
kind: Pod
metadata:
  name: volume-iscsi-2
spec:
  containers:
    - name: iscsipd-ro
      image: kubernetes/pause
      volumeMounts:
        - mountPath: "/mnt/iscsipd"
          name: iscsivol
  volumes:
    - name: iscsivol
      iscsi:
        targetPortal: 127.0.0.1
        iqn: iqn.2015-02.example.com:test
        lun: 0
        fsType: ext4
        readOnly: true
        chapAuthDiscovery: true
        chapAuthSession: true
        secretRef:
          name: chap-secret
---
