BlazorApp/wwwroot/k8s_example/blazork8s_test/volume-nfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-nfs
spec:
  containers:
    - image: registry.k8s.io/test-webserver
      name: test-container
      volumeMounts:
        - mountPath: /my-nfs-data
          name: test-volume
  volumes:
    - name: test-volume
      nfs:
        server: my-nfs-server.example.com
        path: /my-nfs-volume
        readOnly: true
