BlazorApp/wwwroot/k8s_example/blazork8s_test/volume-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-secret
spec:
  volumes:
    - name: secret-volume
      secret:
        secretName: volume-secret
  containers:
    - name: dotfile-test-container
      image: registry.k8s.io/busybox
      command:
        - ls
        - "-l"
        - "/etc/secret-volume"
      volumeMounts:
        - name: secret-volume
          readOnly: true
          mountPath: "/etc/secret-volume"
