BlazorApp/wwwroot/k8s_example/blazork8s_test/endpoint-only-ip.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: only-ip-endpoints
subsets:
  - addresses:
      - ip: 10.0.0.1 # 替换为你想要的IP地址
    ports:
      - port: 80 # 替换为你想要的端口号
