BlazorApp/wwwroot/k8s_example/blazork8s_test/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: example-abc
  labels:
    kubernetes.io/service-name: example
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - 10.1.2.3
    conditions:
      ready: true
    hostname: pod-1
    nodeName: node-1
    zone: us-west2-a
