BlazorApp/wwwroot/k8s_example/blazork8s_test/svc-not-ready.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notreadytest-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notreadytest
  template:
    metadata:
      labels:
        app: notreadytest
    spec:
      containers:
        - name: notreadytest-container
          image: nginx:latest
          readinessProbe:
            # 使用一个永远失败的命令作为就绪探测，这里执行一个不存在的命令，导致探测失败，容器就会一直处于未就绪状态
            exec:
              command:
                - cat
                - /non_existent_file
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: notreadytest-service
spec:
  selector:
    app: notreadytest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
